# tinyc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
tinyc/docs/: language_grammar.md
tinyc/src/: main.cpp
tinyc/src/ast/: ast_printer.hpp  expr.cpp  expr.hpp  stmt.cpp  stmt.hpp
tinyc/src/codegen/: codegen.cpp  codegen.hpp
tinyc/src/common/: args_parser.hpp  error.hpp  file_util.hpp  option.hpp
tinyc/src/lexer/: lexer.cpp  lexer.hpp  token.h  token.hpp  token_type.hpp
tinyc/src/parser/: ast_printer.hpp  expr.hpp  parser.cpp  parser.hpp  stmt.hpp
tinyc/src/resolver/: resolver.cpp  resolver.hpp
tinyc/src/util/: args_parser.hpp  error.hpp  file_reader.hpp  option.hpp
tinyc/test/: check.sh
tinyc/test/bad/: addrof-void.c  array-assign-const-field.c  array-assign.c  array-const-array-field.c  array-const-assign-field.c  array-const-assign.c  array-const-nested.c  array-decl-negative.c  array-decl-zero.c  array-forwarded-struct.c  array-vla.c  array-void.c  assert-is-void.c  assert-override.c  assert-struct.c  assign-to-const.c  assign-to-function.c  cast-from-void.c  do-while-empty.c  do-while-scope.c  enum-addrof.c  enum-assignment-global.c  enum-assignment-local.c  enum-assignment-shadowed.c  enum-deref.c  enum-empty-global.c  enum-empty-local.c  enum-redeclaration-by-variable.c  enum-redeclaration-global.c  enum-redeclaration-local.c  enum-redeclaration-of-variable.c  enum-redeclaration-single-global.c  enum-redeclaration-single-local.c  enum-shadowed-vla.c  false-redeclare-enum.c  false-redeclare-field.c  false-redeclare-fun.c  false-redeclare-struct.c  false-redeclare-variable.c  for-empty.c  (+117 more)
tinyc/test/faulty/: array-const-field-memcpy.c  const-array-write.c  const-struct.c  const-write.c  dead-stack-read.c  dead-stack-write.c  div-by-zero.asm  div-by-zero.c  mod-by-zero.asm  mod-by-zero.c  no-return.c  nullptr-read.c  nullptr-write.c  stack-overflow.c  struct-const-field-memcpy.c  text-read.c  text-write.c  ub-overflow-mul.c  ub-overflow-shl.c  ub-overshift-compound-left.c  ub-overshift-compound-right.c  ub-overshift-left.c  ub-overshift-right.c  ub-shift-compound-negative-left.c  ub-shift-compound-negative-right.c  ub-shift-negative-left.c  ub-shift-negative-right.c  ub-shl-neg.c
tinyc/test/good/: arg-address-taken.c  arg-shift-expression.c  arith-inc-dec-uchar-wrap.c  arith-inc-dec.c  arithmetic-left-shift-unsigned.c  arithmetic-right-shifts.c  arithmetic-unsigned-shl.c  arithmetic-with-immediate-signed.c  arithmetic-with-immediate-unsigned.c  arithmetic-with-neutral-signed.c  arithmetic-with-neutral-unsigned.c  array-arg.c  array-as-bool.c  array-const.c  array-decay.c  array-decl-constexpr.c  array-indexing.c  array-ptr-struct-nesting-arrow.c  array-ptr-struct-nesting.c  array-struct-nesting-arrow.c  array-struct-nesting.c  assert-is-expr.c  assert-shadowing.c  bool.c  (+183 more)
tinyc/tests/: fibonacci.c  parse_error_double_comma_in_params.c  parse_error_else_without_if.c  parse_error_for_missing_rparen.c  parse_error_for_missing_semicolons.c  parse_error_global_initializer_list.c  parse_error_if_missing_rparen.c  parse_error_index_missing_rbracket.c  parse_error_missing_expr_in_parens.c  parse_error_missing_param_name.c  parse_error_missing_rbrace.c  parse_error_missing_rhs_binary.c  parse_error_missing_rparen.c  parse_error_missing_semicolon.c  parse_error_postfix_arrow_missing_field.c  parse_error_postfix_dot_missing_field.c  parse_error_struct_field_missing_semicolon.c  parse_error_struct_forward_missing_semicolon.c  parse_error_struct_inline.c  parse_error_struct_missing_name.c  parse_error_struct_missing_rbrace.c  parse_error_trailing_comma_in_initializer_list.c  parse_error_unterminated_call.c  parse_error_while_missing_lparen.c  pointer_deref.c  run_tinyc_test.py  struct_field_access.c
(+51 files in other folders)
